# markovchain-discord

./: .gitignore  Cargo.toml  README.md
config/: settings.toml
migrations/20251125213845_initial/: down.sql  up.sql
src/: commands.rs  database.rs  event_handler.rs  main.rs  migrations.rs  settings.rs
