[package]
name = "markovchain-discord"
version = "0.1.0"
edition = "2024"

[dependencies]
markovchain-client-lib = { git = "https://github.com/C6OI/markovchain-client-lib.git" }
anyhow = "1.0.100"
url = "2.5.7"
serenity = "0.12.4"
poise = "0.6.1"
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
tokio-postgres = "0.7.15"
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
rand = "0.10.0-rc.5"
